--- a/vis_code_1.ipynb
+++ b/vis_code_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -307,6 +307,35 @@
     "plt.title(\"Number of bonuses per ethnicity\")\n",
     "plt.pie(count_bonuses, labels = labels, autopct=absolute_value)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ethnicity\n",
+      "Asian        206\n",
+      "Caucasian    116\n",
+      "Latino       113\n",
+      "Black         34\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "newdff3= dataframe_clean[['Gender', 'Job Title','Annual Salary', 'Ethnicity', \"Bonus %\"]].copy()\n",
+    "\n",
+    "for x in newdff3.index:\n",
+    "  if newdff3.loc[x, \"Bonus %\"] == 0:\n",
+    "    newdff3.drop(x, inplace = True)\n",
+    "ethnicity_counts = newdff3['Ethnicity'].value_counts()\n",
+    "\n",
+    "print(ethnicity_counts)"
    ]
   }
  ],
